# emuEVM

./: CMakeLists.txt  main.cpp
emuEVM_lib/: stackemu.cpp  stackemu.h
emuEVM_lib/emu/: CMakeLists.txt  emu.cpp
emuEVM_lib/emu/include/: emu.h
emuEVM_lib/emu/tests/: tests_emu.cpp
emuEVM_lib/stackemu/: CMakeLists.txt  stackemu.h
emuEVM_lib/stackemu/tests/: test1_stackemu.cpp
parser/: CMakeLists.txt  parser.cpp
parser/include/: parser.h
preprocessor/: CMakeLists.txt  preprocessor.cpp
preprocessor/include/: preprocessor.h
preprocessor/tests/: tests_preprocessor.cpp
tests/: test1.cpp
